fix straggling css misalignment of go-home button

--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1159,7 +1159,7 @@ li.highlight {
 }
 .mirador-osd-go-home {
   position: absolute;
-  right:30px;
+  right:20px;
   top:20px;
 }
 .mirador-osd-context-controls {
